--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -86,3 +86,10 @@ ul.errorlist {
 li {
     margin-top: 12px;
 }
+
+#footer {
+    margin-top: 12px;
+    margin-bottom: 12px;
+    padding-top: 12px;
+    border-top: 1px solid black;
+}
