--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,15 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Simulation Hub {{block.super}}
+    Simulation Hub Home {{block.super}}
 {% endblock %}
 
 
 {% block content %}
-
-    <h1>Simulation Hub: Where we pretend we're modelling the world
-    </h1>
-
 
     <ul>
         <li>
