--- a/faststi/templates/faststi/faststi.css
+++ b/faststi/templates/faststi/faststi.css
@@ -8,17 +8,6 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
-body {
-    max-width: 900px;
-    margin: auto;
-    padding: 18px;
-    font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 12pt;
-}
-
-p.intro {
-    max-width: 560px;
-}
 
 #sim-parameters {
     border-top: 1px solid lightgray;
@@ -70,11 +59,6 @@ p.intro {
 .source-selector ul {
     list-style: none;
     padding: 0;
-}
-
-.source-selector li,
-.source-selector label {
-    display: inline !important;
 }
 
 .source-selector {
@@ -132,7 +116,7 @@ p.intro {
 }
 
 .fieldWrapper input[type="number"] {
-    width: 4.5em;
+    width: 4em;
     margin-left: 3px;
     margin-right: 6px;
     margin-bottom: 0px;
@@ -166,6 +150,10 @@ p.intro {
 }
 
 @media only screen and (min-width: 700px) {
+    label.stage {
+        display: inline !important;
+    }
+
     #charts {
         display: flex;
         flex-direction: row;
@@ -177,11 +165,6 @@ p.intro {
     }
 }
 
-@media only screen and (max-width: 700px) {
-    body {
-        font-size: 9pt;
-    }
-}
 
 #output {
     background-color: white;
