--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,7 +1,9 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12pt;
-    max-width: 1200px;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 100%;
+    margin: 5%;
+    max-width: 700px;
+    padding: 5%;
     margin: auto;
 }
 
@@ -9,13 +11,24 @@ body {
     cursor: progress;
 }
 
+
+#banner {
+    border-bottom: 1px solid lightgray;
+    top: 0;
+    margin-bottom: 12px;
+}
+
 #messages {
     list-style: none;
     text-align: center;
+    padding: 0;
 }
 
 #messages li {
-    padding: 12px;
+    padding-bottom: 12px;
+    padding-top: 12px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 #messages li.success {
@@ -87,9 +100,14 @@ li {
     margin-top: 12px;
 }
 
-#footer {
+footer {
     margin-top: 12px;
     margin-bottom: 12px;
     padding-top: 12px;
-    border-top: 1px solid black;
+    border-top: 1px solid lightgray;
+    font-size: 80%;
+}
+
+#copyright {
+    margin-left: 15px;
 }
