--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,6 +1,21 @@
+
+@media (min-width: 624px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 623px) {
+    html {
+        font-size: 14px;
+    }
+    canvas {
+        display: block;
+    }
+}
+
 body {
     font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 100%;
     margin: 5%;
     max-width: 700px;
     padding: 5%;
