--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,7 +1,12 @@
-
 @media (min-width: 624px) {
     html {
         font-size: 16px;
+    }
+    body {
+        margin: 5%;
+        max-width: 700px;
+        padding: 5%;
+        margin: auto;
     }
 }
 
@@ -12,14 +17,20 @@
     canvas {
         display: block;
     }
+    body {
+        margin: 2%;
+        padding: 2%;
+        margin: auto;
+    }
 }
 
 body {
     font-family: "Arial Black", Gadget, sans-serif;
-    margin: 5%;
-    max-width: 700px;
-    padding: 5%;
     margin: auto;
+}
+
+h1 {
+    font-size: 120%;
 }
 
 .busy {
@@ -125,4 +136,11 @@ footer {
 
 #copyright {
     margin-left: 15px;
+}
+
+
+@media (max-width: 623px) {
+    #menu {
+        display: block;
+    }
 }
