--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,18 +1,14 @@
 @media (min-width: 624px) {
     body {
-        margin: 5%;
         max-width: 700px;
         padding: 5%;
-        margin: auto;
         font-size: 16px;
     }
 }
 
 @media (max-width: 623px) {
     body {
-        margin: 2%;
         padding: 2%;
-        margin: auto;
         font-size: 14px;
     }
     canvas {
@@ -23,6 +19,7 @@
 body {
     font-family: "Arial Black", Gadget, sans-serif;
     margin: auto;
+    font-size: 16px;
 }
 
 h1 {
