--- a/faststi/templates/faststi/faststi_form.html
+++ b/faststi/templates/faststi/faststi_form.html
@@ -158,10 +158,16 @@
 
 
     <div id="charts">
-        <canvas id="chart-prevalence">
-        </canvas>
-        <canvas id="chart-population">
-        </canvas>
+        <div>
+            <canvas height="300" id="chart-prevalence">
+                Graph showing prevalence against time
+            </canvas>
+        </div>
+        <div>
+            <canvas height="300" id="chart-population">
+                Graph showing number of live and dead agents against time
+            </canvas>
+        </div>
     </div>
 
     <h2>Output</h2>
