Added download link to FastSTI intro.

--- a/faststi/templates/faststi/faststi_form.html
+++ b/faststi/templates/faststi/faststi_form.html
@@ -22,8 +22,9 @@
     <p class="intro">
         This is only a demonstration. We've had to limit what you can do because
         we don't want to break the Internet (or at least our server). To explore
-        the full potential of FastSTI you'll want to run it on your own computer
-        (or a high-performance one that you have access to). The
+        the full potential of FastSTI you'll want to <a href="https://www.simhub.online/media/dist/faststi/latest.tar.gz">download</a> and
+        run it on your own computer (or a high-performance one that you have
+        access to). The
         <a href="https://faststi.readthedocs.io/en/latest/">documentation</a>
         explains how.
     </p>
