--- a/gambler/templates/gambler/gambler_form.html
+++ b/gambler/templates/gambler/gambler_form.html
@@ -8,6 +8,16 @@
     Does a casino make money if the odds are even?
 {% endblock %}
 
+{% block context-menu %}
+    <a href="{% url 'blog:blog_home' %}">
+        Simhub
+    </a>
+    <a href="{% url 'faststi:faststi_form' %}">
+        FastSTI
+    </a>
+{% endblock %}
+
+
 {% block content %}
 
     <form id="sim-parameters" action="{% url 'gambler:gambler_form' %}" method="post">
