Changed download link for faststi.

--- a/faststi/templates/faststi/faststi_form.html
+++ b/faststi/templates/faststi/faststi_form.html
@@ -21,7 +21,7 @@
     <a href="https://faststi.readthedocs.io/en/latest/">
         Documentation
     </a>
-    <a href="https://www.simhub.online/media/dist/faststi/latest.tar.gz">
+    <a href="https://github.com/nathangeffen/faststi/releases/">
         Download
     </a>
     <a href="https://github.com/nathangeffen/faststi">
