Corrected email address.

--- a/blog/templates/blog/cv.html
+++ b/blog/templates/blog/cv.html
@@ -24,7 +24,7 @@
 
 {% block content %}
     <p>
-        Email: info at simhub dot info<br />
+        Email: nathan at quackdown dot info<br />
         Last updated: 27 December 2019.
     </p>
 
