--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -16,7 +16,8 @@
     </p>
 
     <p>
-        Here is my <a href="{% url 'blog:cv' %}">CV</a>.
+        Simhub is maintained by
+        <a href="{% url 'blog:cv' %}">Nathan Geffen</a>.
     </p>
 
 {% endblock %}
