--- a/blog/templates/blog/cv.html
+++ b/blog/templates/blog/cv.html
@@ -15,11 +15,11 @@
 {% endblock %}
 
 {% block title %}
-    Nathan Geffen CV
+    About Nathan Geffen
 {% endblock %}
 
 {% block pagetitle %}
-    Nathan Geffen CV
+    Nathan Geffen
 {% endblock %}
 
 {% block content %}
@@ -56,15 +56,21 @@
         <li>
             <a href="https://www.groundup.org.za">GroundUp</a> reports
             human rights stories from many places in South
-            Africa. (I am currently the editor of GroundUp.)
+            Africa. (Founder and editor of GroundUp.)
         </li>
         <li>
             <a href="http://www.quackdown.info">Quackdown</a> exposed nonsense
             health claims. It is no longer updated.
         </li>
-        <li><a href="http://www.tbonline.info">TB Online</a> is a website reporting
-            the latest news and activism related to tuberculosis. In 2014 I handed
-            maintenance of the site over to the Treatment Action Group.
+        <li>
+            <a href="https://www.simhub.online">
+                Simhub: Home of some of the simulation software I've written.
+            </a>
+        </li>
+        <li><a href="http://www.tbonline.info">TB Online</a> is a website
+            reporting the latest news and activism related to tuberculosis. In
+            2014 I handed maintenance of the site over to the Treatment Action
+            Group.
         </li>
     </ul>
 
