Added link to matestrat.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li>
-            <a href="http://nathangeffen.webfactional.com/matestrat/matestrat.html">
+            <a href="https://matestrat.simhub.online/">
                 Why don't dangerous animals often kill each other when competing
                 for mates? A simulation of how non-lethal agonistic behaviour
                 evolves.
