--- a/faststi/templates/faststi/faststi_form.html
+++ b/faststi/templates/faststi/faststi_form.html
@@ -32,9 +32,10 @@
         </li>
         <li>
             <a href="https://github.com/nathangeffen/faststi">
-                Source code
+                Source
             </a>
         </li>
+    </ul>
 {% endblock %}
 
 {% block pagetitle %}
