Trying to ensure only one style sheet used across projects.

--- a/faststi/templates/faststi/faststi_form.html
+++ b/faststi/templates/faststi/faststi_form.html
@@ -8,7 +8,7 @@
 
 {% block styles %}
     <style>
-     {% include "css/styles-2020.css" %}
+     {% include "css/styles.css" %}
      {% include "faststi/faststi.css" %}
     </style>
 {% endblock %}
