--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
         {% block styles %}
             <style>
-             {% include "css/styles-2020.css" %}
+             {% include "css/styles.css" %}
             </style>
         {% endblock %}
     </head>
