--- a/gambler/templates/gambler/gambler_form.html
+++ b/gambler/templates/gambler/gambler_form.html
@@ -6,7 +6,7 @@
 
 {% block styles %}
     <style>
-     {% include "css/styles-2020.css" %}
+     {% include "css/styles.css" %}
     </style>
 {% endblock %}
 
