--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,35 +1,114 @@
-@media (min-width: 721px) {
-    body {
-        max-width: 700px;
-        margin: 6px auto 6px auto;
-        padding: 10px;
-    }
+body {
+    max-width: 750px;
+    margin: auto;
+    font-family: Helvetica, Arial, sans-serif;
+    padding-top: 24px;
+    color:  #333333;
+    background-color: #ffffff;
+    padding-left: 12px;
+    padding-right: 12px;
+    font-size: 18px;
+    line-height: 1.5em;
 }
 
-@media (max-width: 720px) {
-    body {
-        margin: 6px 12px 6px 12px;
-    }
-}
-
-html, body, p, label, ul, ol, li {
-    font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 16px;
+a {
+    text-decoration: none;
 }
 
 h1 {
-    font-size: 24px;
+    max-width: 600px;
+    font-size: 1.6em;
+    line-height: 1.25em;
 }
 
-.busy {
-    cursor: progress;
+h2 {
+    max-width: 600px;
+    font-size: 1.3em;
+    line-height: 1.2em;
 }
 
+p, ul, ol {
+    margin-top: 22px;
+    margin-bottom: 22px;
+    max-width: 600px;
+}
 
-#banner {
+ul, ol {
+    padding-left: 10px;
+    margin-left: 14px;
+}
+
+li {
+    margin-bottom: 18px;
+}
+
+p#byline {
+    font-style: italic;
+}
+
+p#dateline {
+    font-size: 12px;
+}
+
+pre {
+    font-size: 0.7em;
+}
+
+img {
+    margin-top: 22px;
+    margin-bottom: 22px;
+}
+
+img.fit {
+    max-width: 600px;
+}
+
+nav {
     border-bottom: 1px solid lightgray;
-    top: 0;
-    margin-bottom: 12px;
+}
+
+nav ul {
+    font-size: 16px;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+    padding-right:0;
+}
+
+nav li {
+    display: inline;
+    padding-right: 1px;
+}
+
+nav li::after {
+    content: "|";
+}
+nav li:last-child::after {
+    content: "";
+}
+
+label {
+    display: block;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
+input[type=submit] {
+    display: block;
+    margin-top: 12px;
+}
+
+
+input {
+    min-height: 2.2em;
 }
 
 #messages {
@@ -70,102 +149,76 @@ ul.errorlist {
     color: #D8000C;
 }
 
-#sim-parameters label {
+
+.help-symbol {
+    width: 5px !important;
+    color: blue;
+    cursor:move;
+}
+
+.help-text {
+    border: 1px solid lightgray;
+    padding: 6px;
+    font-size: 0.8em;
+}
+
+#traveler-form, #animation {
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+@media (min-width: 800px) {
+
+    #traveler-form label {
+        display:block;
+        text-align: right;
+        width: 249px;
+        clear: left;
+        float:left;
+        padding-right: 5px;
+        font-size: 0.8em;
+    }
+
+    #traveler-form input {
+        margin-right: 3px;
+    }
+    #buttons {
+        margin-top: 12px;
+        margin-bottom: 12px;
+        padding-left: 249px;
+    }
+
+    #animation label {
+        margin-top: 3px;
+        font-size: 0.8em;
+        display: inline;
+    }
+}
+
+@media (max-width: 799px) {
+    #traveler-form label {
+        padding-top: 6px;
+    }
+    #traveler-form input {
+        margin-right: 3px;
+        width: 25%;
+    }
+    #buttons {
+        margin-top: 6px;
+        margin-bottom: 6px;
+    }
+}
+
+
+#animation button {
+    margin-top: 6px;
+    margin-bottom: 6px;
     display: block;
-    margin-bottom: 3px;
-    margin-top: 5px;
 }
 
-#sim-parameters input {
-    margin-bottom: 12px;
-}
-
-#simulate-button {
-    display: block;
-    margin-bottom: 14px;
-}
-
-#output {
-    height: 180px;
-    overflow-y: scroll;
-    font-size: 15px;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding-left: 22px;
-}
-
-
-#output li {
-    margin-left: 24px;
-    margin-bottom: 4px;
-    margin-top: 4px;
-}
-
-li {
-    margin-top: 12px;
-}
 
 footer {
-    margin-top: 12px;
-    margin-bottom: 12px;
-    padding-top: 12px;
     border-top: 1px solid lightgray;
-    font-size: 14px;
-}
-
-#copyright {
-    margin-left: 15px;
-}
-
-
-/******** MENU **************/
-
- /* Add a black background color to the top navigation */
-nav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-nav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-nav a.active {
- background-color: #4CAF50;
-  color: white;
-}
-
-#open-read-more {
-    color: blue;
-}
-
-#open-read-more:hover {
-    cursor: pointer;
-}
-
-#read-more {
-    display: none;
-    border: 1px solid lightgray;
-    padding: 10px;
-}
-
-pre {
-    font-family: monospace;
-    font-size: 66%;
-    background-color: lightgray;
-    padding: 10px;
 }
