Added pandemic to home page.

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -10,6 +10,11 @@
 
     <ul>
         <li>
+            <a href="https://pandemic.simhub.online/">
+                Pandemic: A simple model of a global infectious disease
+            </a>
+        </li>
+        <li>
             <a href="{% url "faststi:faststi_form" %}">
                 FastSTI: An agent-based model of sexually transmitted infections
             </a>
