Added public key for email address.

--- a/blog/templates/blog/cv.html
+++ b/blog/templates/blog/cv.html
@@ -24,7 +24,7 @@
 
 {% block content %}
     <p>
-        Email: nathangeffen at gmail.com<br />
+        Email: nathan at simhub.online (<a href="{% static 'pages/nathan_at_simhub_online_public.asc' %}">public key</a>)<br />
         Last updated: 27 December 2019.
     </p>
 
