--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -37,6 +37,12 @@
                 Gambler: Test simulation to make sure this website works
             </a>
         </li>
+        <li>
+            <a href="{% url 'sudoku:latest' %}">
+                Sudoku: For your relaxation
+            </a>
+        </li>
     </ul>
+
 
 {% endblock %}
