--- a/sudoku/templates/sudoku/sudoku.css
+++ b/sudoku/templates/sudoku/sudoku.css
@@ -143,3 +143,11 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 700px) {
+    .sudoku-buttons button {
+        width: 14vmin;
+        height: 14vmin;
+        margin-right: 5px;
+    }
+}
