--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         {% endblock %}
                     {% endblock %}
                 </nav>
-                <h1>
+                <h1 id="pagetitle">
                     {% block pagetitle %}
                         Simulation Hub Home
                     {% endblock %}
