Improved info on Sudoku detail.

--- a/sudoku/templates/sudoku/sudoku_detail.html
+++ b/sudoku/templates/sudoku/sudoku_detail.html
@@ -60,7 +60,7 @@
         </li>
 
         <li>
-            Click the blank button to clear a cell.
+            Click the X button to clear a cell.
         </li>
 
         <li>
